fix: broken ui

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -49,15 +49,15 @@ body {
     flex-direction: column;
   }
 
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  .blur {
+  &__blur {
     filter: blur(8px);
     pointer-events: none;
     user-select: none;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
   }
 
   input, button {
