--- a/styles/pages/tv-shows.scss
+++ b/styles/pages/tv-shows.scss
@@ -2,8 +2,7 @@
 
 .tvShows{
     @include m.paddingX-size(3rem);
-    width: 100%;
-    height: 100%;
+    flex:1;
     &__content{
         width: 100%;
         height: 100%;
